job detail page

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -108,9 +108,11 @@
 @import "sections/gallery-images";
 @import "sections/section-features-image";
 @import "sections/latest-posts";
+@import "sections/careers-hero";
 @import "sections/industry-benefits";
 @import "sections/careers-content";
 @import "sections/workable-jobs-list";
+@import "sections/careers-job-detail";
 
 
 /*
