--- a/templates/page-careers.twig
+++ b/templates/page-careers.twig
@@ -1,18 +1,7 @@
 {% extends 'base.twig' %}
 
 {% block header %}
-    <div class="careers-hero" style="background-image: url('{{ post.thumbnail }}')">
-        <div class="container">
-            <div class="d-flex justify-content-center flex-column text-center text-white">
-                <div><img src="{{ theme.link }}/dist/images/logo.svg"></div>
-
-                <h1 class="text-uppercase">{{ post.title }}</h1>
-                <div class="reset-last-child">
-                    {{ post.content }}
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include 'components/sections/careers-hero.twig' %}
 {% endblock %}
 
 
