--- a/src/sass/essential/pages/_careers.scss
+++ b/src/sass/essential/pages/_careers.scss
@@ -1,52 +1,9 @@
+.page-job-detail,
 .page-template-page-careers{
     padding-top: 0!important;
 
     #content{
         overflow: initial;
-    }
-
-    .careers-hero{
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        padding: 150px 0 300px;
-        font-size: 22px;
-        font-weight: bold;
-
-        img{
-            margin-bottom: 100px;
-        }
-
-        h1{
-            font-size: 38px;
-            font-weight: inherit;
-            margin-bottom: 15px;
-        }
-
-        @include media-breakpoint-down(lg) {
-            padding: 100px 0 250px;
-        }
-
-        @include media-breakpoint-down(sm) {
-            padding: 50px 0 150px;
-
-            img{
-                margin-bottom: 50px;
-            }
-        }
-
-        @include media-breakpoint-down(xs) {
-            padding: 30px 0 80px;
-
-            img{
-                max-width: 50px;
-                margin-bottom: 30px;
-            }
-
-            h1{
-                font-size: 30px;
-            }
-        }
     }
 
     .page-section{
