categories shortcode + responsove

--- a/src/sass/essential/sections/_careers-content.scss
+++ b/src/sass/essential/sections/_careers-content.scss
@@ -35,6 +35,10 @@
                 }
             }
         }
+
+        [data-workable="categories"] {
+            margin-top: 50px;
+        }
     }
 
     &__gallery{
