--- a/src/sass/essential/pages/_careers.scss
+++ b/src/sass/essential/pages/_careers.scss
@@ -1,4 +1,3 @@
-.page-job-detail,
 .page-template-page-careers{
     padding-top: 0!important;
 
@@ -12,6 +11,93 @@
 
             @include media-breakpoint-down(md) {
                 font-size: 35px;
+            }
+
+            @include media-breakpoint-down(sm) {
+                font-size: 30px;
+            }
+        }
+    }
+
+    .workable-categories-list{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 60px;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li{
+            text-align: center;
+
+            a{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                height: 100%;
+
+                img{
+                    transition: 0.2s ease all;
+                }
+
+                .workable-category-content{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                    justify-content: space-between;
+                    flex: 1;
+                }
+
+                .workable-category-name{
+                    font-size: 23px;
+                    font-weight: 600;
+                    line-height: 1.3;
+                    flex: 1;
+                    color: $brand-main-blue;
+                }
+
+                .workable-category-count{
+                    color: var(--text-brand-red);
+                }
+
+                &:hover{
+                    text-decoration: none;
+
+                    img{
+                        border-radius: 30px;
+                    }
+                }
+            }
+        }
+
+        @include media-breakpoint-down(lg) {
+            gap: 30px;
+        }
+
+        @include media-breakpoint-down(md) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @include media-breakpoint-down(sm) {
+            display: flex;
+            flex-direction: column;
+
+            li{
+                a{
+                    flex-direction: row;
+
+                    img{
+                        width: 100px;
+                    }
+
+                    .workable-category-content{
+                        text-align: left;
+                    }
+
+                    .workable-category-name{
+                        font-size: 20px;
+                    }
+                }
             }
         }
     }
