fix body padding + added link for logo

--- a/components/sections/careers-hero.twig
+++ b/components/sections/careers-hero.twig
@@ -1,7 +1,7 @@
 <div class="careers-hero {{ css_class }}" style="background-image: url('{{ post.thumbnail }}')">
     <div class="container">
         <div class="careers-hero__content d-flex text-white">
-            <div><img src="{{ theme.link }}/dist/images/logo.svg"></div>
+            <div><a href="{{ site.link }}"><img src="{{ theme.link }}/dist/images/logo.svg"></a></div>
             <div>
                 <h1 class="text-uppercase">{{ post.title }}</h1>
                 <div class="reset-last-child">
