--- a/src/sass/essential/pages/_careers.scss
+++ b/src/sass/essential/pages/_careers.scss
@@ -1,6 +1,9 @@
-.page-template-page-careers{
+.page-template-page-careers,
+.page-job-detail{
     padding-top: 0!important;
+}
 
+.page-template-page-careers{
     #content{
         overflow: initial;
     }
