--- a/components/sections/workable_jobs_list.twig
+++ b/components/sections/workable_jobs_list.twig
@@ -29,7 +29,10 @@
                     <div class="form-group">
                         <label>Remote Only</label>
                         <div>
-                            <input type="checkbox" name="remote_only" value="1">
+                            <label class="checkbox-switcher mt-2">
+                                <input type="checkbox" name="remote_only" value="1">
+                                <span></span>
+                            </label>
                         </div>
                     </div>
                 </div>
