benefits icons style + responsive

--- a/components/sections/industry_benefits.twig
+++ b/components/sections/industry_benefits.twig
@@ -19,7 +19,7 @@
 
                         <div class="industry-benefit-item">
                             <div class="industry-benefit-item__image pb-2">
-                                <img src="{{ item.image }}" alt="{{ item.title }}" height="100" style="height: 100px;">
+                                <img src="{{ item.image }}" alt="{{ item.title }}">
                             </div>
                             <h3 class="mb-0 font-weight-bold text-brand-red">{{ item.title }}</h3>
                             <div class="reset-last-child industry-benefit-item__content">
