--- a/src/sass/essential/sections/_industry-benefits.scss
+++ b/src/sass/essential/sections/_industry-benefits.scss
@@ -8,6 +8,42 @@
     h3{
         font-size: 23px;
     }
+
+    &__image{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+        position: relative;
+
+        img{
+            position: absolute;
+            object-fit: contain;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-position: center;
+        }
+    }
+
+    @include media-breakpoint-down(sm) {
+        &__image{
+            height: 80px;
+        }
+    }
+
+    @include media-breakpoint-down(xs) {
+        font-size: 8px;
+
+        h3{
+            font-size: 16px;
+        }
+
+        &__image{
+            height: 50px;
+        }
+    }
 }
 
 .section-industry-benefits{
@@ -24,8 +60,15 @@
             grid-template-columns: 1fr 1fr;
         }
 
-        @include media-breakpoint-down(md) {
-            grid-template-columns: none;
+        @include media-breakpoint-down(sm) {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0;
+
+            & > div{
+                flex: 1;
+                flex-basis: 50%;
+            }
         }
     }
 }
