--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -24,7 +24,7 @@
                 <li><a target="_blank" href="https://www.propertymark.co.uk/find-an-expert.html?q=stirling+ackroyd&property_badge="><img src="{{ theme.link }}/dist/images/footer-logo2.svg"></a></li>
                 <li><a target="_blank" href="https://www.tpos.co.uk/find-a-member"><img src="{{ theme.link }}/dist/images/footer-logo3.svg"></a></li>
                 {#<li><a target="_blank" href="https://www.tpos.co.uk/find-a-member"><img src="{{ theme.link }}/dist/images/tpo-black-logo.jpg"></a></li>#}
-                <li><img src="{{ theme.link }}/dist/images/Trading_standards.svg"></li>
+                <li><img src="{{ theme.link }}/dist/images/iso9001.jpg"></li>
                 {#<li><img src="{{ theme.link }}/dist/images/ISO_9001.jpeg"></li>
                 <li><img src="{{ theme.link }}/dist/images/rics-logo.png"></li>#}
             </ul>
