--- a/src/sass/essential/pages/_careers.scss
+++ b/src/sass/essential/pages/_careers.scss
@@ -24,8 +24,8 @@
 
     .workable-categories-list{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 60px;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 30px;
         list-style: none;
         margin: 0;
         padding: 0;
@@ -52,7 +52,7 @@
                 }
 
                 .workable-category-name{
-                    font-size: 23px;
+                    font-size: 18px;
                     font-weight: 600;
                     line-height: 1.3;
                     flex: 1;
