feefo hide comments on branch page

--- a/src/sass/essential/sections/_page-top.scss
+++ b/src/sass/essential/sections/_page-top.scss
@@ -72,11 +72,16 @@
                 padding: 0;
             }
 
+            .mobile-comments-accordion,
             .feefowidget-merchant-header__summary .feefowidget-header-information-title,
             .feefowidget-merchant-header__summary .feefowidget-header-image,
             .feefowidget-footer,
             .feefowidget-global-container-body{
                 display: none;
+            }
+
+            .on-page-footer{
+                padding-top: 0;
             }
         }
     }
