branch page top section - bold text

--- a/src/sass/essential/pages/_branch-detail.scss
+++ b/src/sass/essential/pages/_branch-detail.scss
@@ -1,4 +1,10 @@
 .single-sa_branch{
+    .section-page-top.page-top-fullwidth{
+        .section-page-top--content{
+            font-weight: 500;
+        }
+    }
+
     .branch-contact-details{
         margin-bottom: 30px;
 
