branch new hero - fix mobile view

--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -546,11 +546,11 @@
         }
     }
 
-    .single-sa_branch{
+    /*.single-sa_branch{
         .section-page-top{
             &--image-wrap{
                 display: none;
             }
         }
-    }
+    }*/
 }
