--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*
- * Theme Name: Crowd Base Build
- * Description: A base build for Crowd's Themes
- * Author: Crowd <results@thisiscrowd.com>
+ * Theme Name: Beep Base Build
+ * Description: A base build for Beep Themes
+ * Author: Beep
+ * Author URI: https://beep.digital/
+ * Version: 1.0
 */
