footer change developed by

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -41,7 +41,7 @@
 
             </nav>
             <div class="developed-by">
-                Site by <a href="https://thisiscrowd.com" target="_blank">Crowd</a>
+                Site by <a href="https://beep.digital" target="_blank">Beep</a>
             </div>
         </div>
     </div>
