properties listing - change address display

--- a/templates/page-properties-listing.twig
+++ b/templates/page-properties-listing.twig
@@ -17,8 +17,6 @@
                             <div class="form-controls-wrap">
 
 
-                                <div class="control control-property_type residential-only" style="display: block;"><label for="property_type">Property Type</label><select name="property_type" id="property_type" class="" data-blank-option="Select"><option value="" selected="selected">Select</option><option value="18">Bungalow</option><option value="22">Flat / Apartment</option><option value="9">House</option><option value="30">Other</option></select></div>
-
 
                                 <div class="control control-address_keyword"><label for="address_keyword">Area or Postcode</label><input type="text" name="address_keyword" id="address_keyword" value="" placeholder="e.g. EC2" class="pac-target-input" style="" autocomplete="off"></div>
 
@@ -26,19 +24,10 @@
                                 <div class="control control-radius"><label for="radius">Radius</label><select name="radius" id="radius" class="" data-blank-option=""><option value="">This Area Only</option><option value="1">Within 1 Mile</option><option value="2" selected="selected">Within 2 Miles</option><option value="3">Within 3 Miles</option><option value="5">Within 5 Miles</option><option value="10">Within 10 Miles</option></select></div>
 
 
-                                <div class="control control-minimum_price sales-only" style="display: block;"><label for="minimum_price">Min Price</label><select name="minimum_price" id="minimum_price" class="" data-blank-option=""><option value="" selected="selected">No min</option><option value="100000">£100,000</option><option value="200000">£200,000</option><option value="300000">£300,000</option><option value="500000">£500,000</option><option value="750000">£750,000</option><option value="1000000">£1,000,000</option><option value="1500000">£1,500,000</option><option value="2000000">£2,000,000</option><option value="2500000">£2,500,000</option><option value="3000000">£3,000,000</option></select></div>
+                                <div class="control control-minimum_price sales-only" style="display: block;"><label for="minimum_price">Min Desks</label><select name="minimum_price" id="minimum_price" class="" data-blank-option=""><option value="" selected="selected">No min</option><option value="100000">£100,000</option><option value="200000">£200,000</option><option value="300000">£300,000</option><option value="500000">£500,000</option><option value="750000">£750,000</option><option value="1000000">£1,000,000</option><option value="1500000">£1,500,000</option><option value="2000000">£2,000,000</option><option value="2500000">£2,500,000</option><option value="3000000">£3,000,000</option></select></div>
 
 
-                                <div class="control control-maximum_price sales-only" style="display: block;"><label for="maximum_price">Max Price</label><select name="maximum_price" id="maximum_price" class="" data-blank-option=""><option value="" selected="selected">No max</option><option value="100000">£100,000</option><option value="200000">£200,000</option><option value="300000">£300,000</option><option value="500000">£500,000</option><option value="750000">£750,000</option><option value="1000000">£1,000,000</option><option value="1500000">£1,500,000</option><option value="2000000">£2,000,000</option><option value="2500000">£2,500,000</option><option value="3000000">£3,000,000</option><option value="5000000">£5,000,000</option><option value="6000000">£6,000,000</option></select></div>
-
-
-                                <div class="control control-minimum_rent lettings-only" style="display: none;"><label for="minimum_rent">Min Rent</label><select name="minimum_rent" id="minimum_rent" class="" data-blank-option=""><option value="" selected="selected">No min</option><option value="500">£500pcm (£116pcw)</option><option value="750">£750pcm (£174pcw)</option><option value="1000">£1,000 (£231pcw)</option><option value="1250">£1,250 (£289pcw)</option><option value="2000">£2,000 (£462pcw)</option><option value="3000">£3,000 (£693pcw)</option><option value="4000">£4,000 (£924pcw)</option><option value="5000">£5,000 (£1,154pcw)</option><option value="6000">£6,000 (£1,385pcw)</option><option value="7000">£7,000 (£1,616pcw)</option><option value="8000">£8,000 (£1,847pcw)</option></select></div>
-
-
-                                <div class="control control-maximum_rent lettings-only" style="display: none;"><label for="maximum_rent">Max Rent</label><select name="maximum_rent" id="maximum_rent" class="" data-blank-option=""><option value="" selected="selected">No max</option><option value="500">£500 (£116pcw)</option><option value="750">£750 (£174pcw)</option><option value="1000">£1,000pcm (£231pcw)</option><option value="1250">£1,250pcm (£289pcw)</option><option value="2000">£2,000pcm (£462pcw)</option><option value="3000">£3,000pcm (£693pcw)</option><option value="4000">£4,000pcm (£924pcw)</option><option value="5000">£5,000pcm (£1,154pcw)</option><option value="6000">£6,000pcm (£1,385pcw)</option><option value="7000">£7,000pcm (£1,616pcw)</option><option value="8000">£8,000pcm (£1,847pcw)</option></select></div>
-
-
-                                <div class="control control-minimum_bedrooms residential-only" style="display: block;"><label for="minimum_bedrooms">Min Desks</label><select name="minimum_bedrooms" id="minimum_bedrooms" class="" data-blank-option=""><option value="" selected="selected">Select</option><option value="0">Studio</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option></select></div>
+                                <div class="control control-maximum_price sales-only" style="display: block;"><label for="maximum_price">Max Desks</label><select name="maximum_price" id="maximum_price" class="" data-blank-option=""><option value="" selected="selected">No max</option><option value="100000">£100,000</option><option value="200000">£200,000</option><option value="300000">£300,000</option><option value="500000">£500,000</option><option value="750000">£750,000</option><option value="1000000">£1,000,000</option><option value="1500000">£1,500,000</option><option value="2000000">£2,000,000</option><option value="2500000">£2,500,000</option><option value="3000000">£3,000,000</option><option value="5000000">£5,000,000</option><option value="6000000">£6,000,000</option></select></div>
 
 
                                 <input type="hidden" name="department" value="residential-sales">
@@ -50,44 +39,7 @@
                                 </div>
 
                             </div>
-
-
-                            <div class="property-search-form--checkbox-group">
-                                <div class="custom-control custom-checkbox custom-control-inline" style="display: inline-block">
-                                    <input type="checkbox" class="custom-control-input" name="include_sold" value="1" id="include-recent-props-checkbox">
-                                    <label class="custom-control-label" for="include-recent-props-checkbox">Include Recently Sold Properties</label>
-                                </div>
-                                <div class="custom-control custom-checkbox custom-control-inline" style="display: inline-block">
-                                    <input type="checkbox" class="custom-control-input" name="new_home" value="1" id="new-homes-checkbox">
-                                    <label class="custom-control-label" for="new-homes-checkbox">New Homes Only</label>
-                                </div>
-                                <!--<div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="checkbox" name="include_sold" value="1"  id="include-recent-props-checkbox">
-                                    <label class="form-check-label" for="include-recent-props-checkbox">Include Recently Sold Properties</label>
-                                </div>
-                                <div class="form-check form-check-inline" style="display: inline-block">
-                                    <input class="form-check-input" type="checkbox" name="new_home" value="1"  id="new-homes-checkbox">
-                                    <label class="form-check-label" for="new-homes-checkbox">New Homes Only</label>
-                                </div>-->
-                            </div>
                         </form>
-
-
-                        <a data-fancybox="" data-src="#save_search_popup" href="javascript:;" class="button propertyhive-save-search-button"><i class="fa-regular fa-bell" aria-hidden="true"></i> Save Search</a>
-                        <!-- LIGHTBOX FORM -->
-                        <div id="save_search_popup" style="display:none;">
-                            <p>Please log in <a href="https://www.stirlingackroyd.com/register/?save_search=1">or register</a> to be able to save searches</p>
-                            <form name="ph_login_form" class="propertyhive-form login-form" action="" method="post">
-
-                                <div id="loginError" style="display:none;" class="alert alert-danger alert-box">
-                                    Invalid details provided. Please try again    </div>
-
-                                <div class="control control-email_address"><label for="email_address">Email Address<span class="required"> *</span></label><input type="email" name="email_address" id="email_address" value="" placeholder="" class="" style="" required=""></div><div class="control control-password"><label for="password">Password<span class="required"> *</span></label><input type="password" name="password" id="password" value="" placeholder="" class="" style="" required=""></div>
-                                <input type="submit" value="Login">
-
-
-                            </form>        </div>
-                        <!-- END LIGHTBOX FORM -->
                     </div>
                 </div>
             </div>
@@ -152,7 +104,9 @@
                         <ul class="properties clear view-grid">
 
                             {% for property in proeprties %}
-                                {% set address = property.address_line1 ~ ', ' ~ property.address_city %}
+                                {% set postcodeSplit = property.address_postcode | split(' ') %}
+                                {% set postcode = postcodeSplit | length > 1 ? postcodeSplit[0] : property.address_postcode %}
+                                {% set address = property.address_city ~ ', ' ~ postcode %}
 
                                 <li class="{{ loop.first ? 'first' }} {{ loop.last ? 'last' }} post-{{ property.id }} type-property status-{{ property.status}}">
 
@@ -160,9 +114,9 @@
                                         <div class="thumbnail">
                                             <a href="{{ property.link }}">
                                                 {% if property.gallery %}
-                                                    <img src="{{ property.gallery[0].url }}" alt="{{ address }}">
+                                                    <img src="{{ property.gallery[0].url }}" alt="{{ property.title }}">
                                                 {% else %}
-                                                    <img src="https://place-hold.it/500x500/.jpg?text=No%20Image" alt="{{ address }}">
+                                                    <img src="https://place-hold.it/500x500/.jpg?text=No%20Image" alt="{{ property.title }}">
                                                 {% endif %}
                                                 <div class="property-images-count"><i class="fa-light fa-camera" aria-hidden="true"></i> {{ property.gallery | length }}</div>
                                             </a>
